--- a/choiceseditdialog.ui
+++ b/choiceseditdialog.ui
@@ -29,7 +29,17 @@
       <property name="spacing">
        <number>4</number>
       </property>
-      <item row="1" column="0">
+      <item row="0" column="0" colspan="2">
+       <widget class="QListWidget" name="choices_list">
+        <property name="dragDropMode">
+         <enum>QAbstractItemView::InternalMove</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QLineEdit" name="choices_text"/>
+      </item>
+      <item row="2" column="0">
        <widget class="QPushButton" name="pushButton">
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
@@ -39,14 +49,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QListWidget" name="choices_list">
-        <property name="dragDropMode">
-         <enum>QAbstractItemView::InternalMove</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="QPushButton" name="pushButton_2">
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
@@ -56,8 +59,15 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="2">
-       <widget class="QLineEdit" name="choices_text"/>
+      <item row="1" column="0" colspan="2">
+       <widget class="QCheckBox" name="condition_combobox">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Condition</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
