--- a/choiceseditdialog.ui
+++ b/choiceseditdialog.ui
@@ -36,6 +36,16 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="text">
+         <string>Remove</string>
+        </property>
+       </widget>
+      </item>
       <item row="3" column="0" colspan="2">
        <widget class="QLineEdit" name="choices_text"/>
       </item>
@@ -49,23 +59,16 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+      <item row="1" column="0" colspan="2">
+       <widget class="QPushButton" name="script">
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
         </property>
         <property name="text">
-         <string>Remove</string>
+         <string>Script</string>
         </property>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QCheckBox" name="condition_combobox">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>Condition</string>
+        <property name="checkable">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
