--- a/eventlistitem.ui
+++ b/eventlistitem.ui
@@ -118,7 +118,10 @@
          <property name="bottomMargin">
           <number>2</number>
          </property>
-         <item row="0" column="0">
+         <property name="verticalSpacing">
+          <number>2</number>
+         </property>
+         <item row="1" column="0">
           <widget class="ClickableLabel" name="bgPreview">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -134,6 +137,16 @@
            </property>
            <property name="text">
             <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="bgName">
+           <property name="text">
+            <string/>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
