--- a/backgroundeditdialog.ui
+++ b/backgroundeditdialog.ui
@@ -385,6 +385,9 @@
             </item>
             <item row="1" column="2">
              <widget class="QPushButton" name="pick_button">
+              <property name="focusPolicy">
+               <enum>Qt::NoFocus</enum>
+              </property>
               <property name="text">
                <string>Pick</string>
               </property>
